Start Database Configuration.
Add `sqlite-jdbc` dependency, create 'configuration' directory
and start DatabaseConfiguration.

--- a/src/main/resources/templates/publication/create.html
+++ b/src/main/resources/templates/publication/create.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <form method="post">
-            <textarea name="pubBody" placeholder="Body"></textarea>
-
+            <textarea name="pubBody" placeholder="Publication" rows="15" cols="50"></textarea>
+            <br/>
             <button type="submit">Post</button>
         </form>
     </body>
