Store datetime when publishing.
Change publication_date to String so it can be stored using a format.
Add 'required' flag to the publication textarea.
Add @NotNull notations to Publication columns.

--- a/src/main/resources/templates/publication/create.html
+++ b/src/main/resources/templates/publication/create.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <form method="post">
-            <textarea name="pubBody" placeholder="Publication" rows="15" cols="50"></textarea>
+            <textarea name="pubBody" placeholder="Publication" required rows="15" cols="50"></textarea>
             <br/>
             <button type="submit">Post</button>
         </form>
