Move from bl.blapco.xyz to blapco.xyz
Initially, mcrb was supposed to be a personal project, so, it
would be published to bl.blapco.xyz, git.blapco.xyz/Personal/mcrb.
I've decided to publish it as a blapco project, and not a personal project.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
             <h1>mcrb</h1>
             <a>Home</a>
             <br/>
-            <a href="/mcrb/publication/create">Publish</a>
+            <a href="./publication/create">Publish</a>
         </header>
         <div th:each="publication : ${publications}">
             <div>
