--- a/src/main/resources/templates/publication/create.html
+++ b/src/main/resources/templates/publication/create.html
@@ -3,11 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Create publication</title>
+        <link rel="stylesheet" href="../style/style.css"/>
     </head>
     <body>
+    <header>
+        <h1>mcrb</h1>
+        <div class="menu">
+            <a href="../">Home</a>
+            <a>Publish</a>
+        </div>
+    </header>
         <form method="post">
-            <textarea name="pubBody" placeholder="Publication" required rows="15" cols="50"></textarea>
-            <br/>
+            <textarea name="pubBody" placeholder="Publication" required rows="10" cols="50"></textarea>
+            <br/><br/>
             <button type="submit">Post</button>
         </form>
     </body>
